src/client/assets/app.css
/* General styles & reset */

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: #333;
}

body {
    width: 100vw;
    font-family: 'Source Sans Pro', sans-serif;
}

footer {
    background-color: #00fdc8;
    text-align: center;
    padding: 2em;
    margin: 3em 0 0;
    min-height: 20em;
}

section {
    margin: 15px 0;
    padding: 0 10px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Slabo 27px', serif;
    font-weight: 300;
}

#allContent {
    max-width: 50em;
    width: 100%;
    margin: 0 auto;
}


/* Image related styles */

#imgContainer {
    -ms-flex-wrap: wrap;
    display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;
    font-size: 0;
    margin-bottom: 30px;
}

#imgContainer .imgWrapper {
    width: 100%;
}

#imgContainer .imgWrapper img {
    width: 100%;
}

#imgContainer .imgWrapper .imgInfo {
    font-size: 12px;
    line-height: 20px;
    color: #ffffff;
    text-shadow: 2px 5px 5px #000;
    position: relative;
    bottom: 20px;
    margin-left: 10px;
    margin-bottom: -20px;
}

#imgContainer .imgWrapper .imageComment {
    padding: 2px 5px;
    font-size: 15px;
    height: 25px;
    border: 1px solid #ccc;
}

@media screen and (min-width: 30em) {
    #imgContainer .imgWrapper {
        width: 50%;
    }
}

@media screen and (min-width: 50em) {
    #imgContainer .imgWrapper {
        width: 33.3%;
    }
}


/* fallback for earlier versions of Firefox */

@supports not (flex-wrap: wrap) {
    div#imgContainer {
        display: block;
    }
    div#imgContainer .imgWrapper {
        display: inline-block;
        vertical-align: top;
    }
}

.clickable {
    cursor: pointer;
}


/* VideoList *****************************************************************/

.video-box {
    background-color: #ccc;
    border: 1px solid #ccc;
    margin-bottom: 15px;
}

.video-box>video {
    max-width: 100%;
}

.video-box>.infoWrapper {
    padding: 5px;
}


/*****************************************************************************/


/*****************************************************************************/

